--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     ],
     "require": {
         "php": "^7.4 || ^8.0",
-        "reactificate/utils": "dev-master"
+        "reactificate/utils": "^0.0.1",
+        "react/http": "^1.2"
     }
 }
