--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,16 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "reactificate/utils": "^0.0.1",
-        "react/http": "^1.2"
+        "react/http": "^1.2",
+        "nette/utils": "^3.2",
+        "voryx/websocketmiddleware": "^2.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Reactificate\\Websocket\\": "src/"
+        }
+    },
+    "scripts": {
+        "analyse": "phpstan analyse"
     }
 }
