Prebuilt server provided composer packages update

--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,10 @@
     },
     "scripts": {
         "analyse": "phpstan analyse"
+    },
+    "config": {
+        "platform": {
+            "PHP": "7.4"
+        }
     }
 }
