Websocket server can now be created using this library directly. ServerInfo::getInfo() renamed to ::getPrefix() Payload::message() bug fixed WebSocketServer removed ChatServer added (for testing purposes) README.md update

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     ],
     "require": {
         "php": "^7.4 || ^8.0",
+        "ext-json": "*",
         "reactificate/utils": "^0",
         "react/http": "^1.2",
         "nette/utils": "^3.2",
